test/sema/non_void_main.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: 'main' function is expected to have 'void' type
fn main() -> i32 {}
// CHECK: ResolvedModuleDecl
// CHECK-NOT: {{.*}}
